--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pokefinder",
-  "homepage": "https://github.com/Dillon-MC/Pokefinder/index.html",
+  "homepage": "http://dillon-mc.github.io/Pokefinder/index.html",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
