--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pokefinder",
-  "homepage": "http://dillon-mc.github.io/Pokefinder/index.html",
+  "homepage": "http://dillon-mc.github.io/Pokefinder",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,12 +18,12 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
